--- a/immitations/style.css
+++ b/immitations/style.css
@@ -13,7 +13,7 @@ img {
 #football_field {
   
   border: 20px solid;
-  border-image: url("tic-tac-toe.png") 48 round;
+  border-image: url("/tic-tac-toe.png") 48 round;
   -webkit-filter: saturate(0%);
   filter: saturate(0%);
   
